--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,133 +1,39 @@
-name: Docker
+name: Docker Push
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # 手动触发
   push:
-    branches: [ main ]
-
-env:
-  ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"
-  ALIYUN_NAME_SPACE: "${{ secrets.ALIYUN_NAME_SPACE }}"
-  ALIYUN_REGISTRY_USER: "${{ secrets.ALIYUN_REGISTRY_USER }}"
-  ALIYUN_REGISTRY_PASSWORD: "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}"
+    branches:
+      - main  # 在 main 分支推送时触发
 
 jobs:
   build:
-    name: Pull
     runs-on: ubuntu-latest
+
     steps:
-    - name: Check environment variables
-      run: |
-        echo "ALIYUN_REGISTRY: $ALIYUN_REGISTRY"
-        echo "ALIYUN_NAME_SPACE: $ALIYUN_NAME_SPACE"
-        echo "ALIYUN_REGISTRY_USER: $ALIYUN_REGISTRY_USER"
-        echo "ALIYUN_REGISTRY_PASSWORD: $ALIYUN_REGISTRY_PASSWORD"
-
-    - name: Before freeing up disk space
-      run: |
-        echo "Before freeing up disk space"
-        echo "=============================================================================="
-        df -hT
-        echo "=============================================================================="
-
-    - name: Maximize build space
-      uses: easimon/maximize-build-space@master
-      with:
-        root-reserve-mb: 2048
-        swap-size-mb: 128
-        remove-dotnet: 'true'
-        remove-haskell: 'true'
-        build-mount-path: '/var/lib/docker/'
-
-    - name: Restart docker
-      run: sudo service docker restart
-
-    - name: Free up disk space complete
-      run: |
-        echo "Free up disk space complete"
-        echo "=============================================================================="
-        df -hT
-        echo "=============================================================================="
-
     - name: Checkout Code
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
-    - name: Docker Setup Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build and push image Aliyun
+    - name: Pull Docker Image
       run: |
-        echo "Logging into Docker registry..."
-        echo "$ALIYUN_REGISTRY_PASSWORD" | docker login -u "$ALIYUN_REGISTRY_USER" --password-stdin "$ALIYUN_REGISTRY"
-        
-        # 数据预处理, 判断镜像是否重名
-        declare -A duplicate_images
-        declare -A temp_map
+        echo "Pulling Docker image from Docker Hub..."
+        docker pull infiniflow/ragflow:v0.16.0
 
-        while IFS= read -r line || [ -n "$line" ]; do
-            [[ -z "$line" ]] && continue
-            if echo "$line" | grep -q '^\s*#'; then
-                continue
-            fi
-            
-            image=$(echo "$line" | awk '{print $NF}')
-            image="${image%%@*}"
-            echo "Processing image: $image"
-            
-            image_name_tag=$(echo "$image" | awk -F'/' '{print $NF}')
-            name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
-            name_space="${name_space}_"
-            image_name=$(echo "$image_name_tag" | awk -F':' '{print $1}')
-            
-            if [[ -n "${temp_map[$image_name]}" ]]; then
-                if [[ "${temp_map[$image_name]}" != $name_space ]]; then
-                    echo "Duplicate image name detected: $image_name"
-                    duplicate_images[$image_name]="true"
-                fi
-            else
-                temp_map[$image_name]=$name_space
-            fi       
-        done < images.txt
-        
-        while IFS= read -r line || [ -n "$line" ]; do
-            [[ -z "$line" ]] && continue
-            if echo "$line" | grep -q '^\s*#'; then
-                continue
-            fi
+    - name: Login to Alibaba Cloud Docker Registry
+      run: |
+        echo "czxzj1259" | docker login --username="52088xiangzi@163.com" --password-stdin registry.cn-hangzhou.aliyuncs.com
 
-            echo "Pulling image: $line"
-            docker pull $line
-            
-            platform=$(echo "$line" | awk -F'--platform[ =]' '{if (NF>1) print $2}' | awk '{print $1}')
-            platform_prefix="${platform//\//_}_"
-            echo "Platform prefix: $platform_prefix"
-            
-            image=$(echo "$line" | awk '{print $NF}')
-            image_name_tag=$(echo "$image" | awk -F'/' '{print $NF}')
-            name_space=$(echo "$image" | awk -F'/' '{if (NF==3) print $2; else if (NF==2) print $1; else print ""}')
-            image_name=$(echo "$image_name_tag" | awk -F':' '{print $1}')
-            
-            name_space_prefix=""
-            if [[ -n "${duplicate_images[$image_name]}" && -n "$name_space" ]]; then
-                name_space_prefix="${name_space}_"
-            fi
-            
-            image_name_tag="${image_name_tag%%@*}"
-            new_image="$ALIYUN_REGISTRY/$ALIYUN_NAME_SPACE/$platform_prefix$name_space_prefix$image_name_tag"
-            echo "Tagging image: $image as $new_image"
-            docker tag $image $new_image
-            
-            echo "Pushing image: $new_image"
-            docker push $new_image
-            
-            echo "Starting disk cleanup"
-            echo "=============================================================================="
-            df -hT
-            echo "=============================================================================="
-            docker rmi "$image" || echo "Failed to remove image: $image"
-            docker rmi "$new_image" || echo "Failed to remove image: $new_image"
-            echo "Disk space cleanup complete"
-            echo "=============================================================================="
-            df -hT
-            echo "=============================================================================="     
-        done < images.txt
+    - name: Tag Docker Image
+      run: |
+        IMAGE_ID=$(docker images -q infiniflow/ragflow:v0.16.0)
+        echo "Tagging image with ID: $IMAGE_ID"
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v0.16.0
+
+    - name: Push Docker Image to Alibaba Cloud
+      run: |
+        echo "Pushing Docker image to Alibaba Cloud..."
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v0.16.0
+
+    - name: Logout from Docker Registry
+      run: |
+        docker logout registry.cn-hangzhou.aliyuncs.com
