--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull infiniflow/ragflow:v0.16.0
+        docker pull elasticsearch:8.17.2
 
     - name: Login to Alibaba Cloud Docker Registry
       run: |
