--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull postgres:15
+        docker pull jeessy/ddns-go:v6.8.1
 
     - name: Login to Alibaba Cloud Docker Registry
       run: |
@@ -27,12 +27,12 @@ jobs:
       run: |
         IMAGE_ID=$(docker images -q jeessy/ddns-go:v6.8.1)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:jeessy/ddns-go:v6.8.1
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1
 
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:jeessy/ddns-go:v6.8.1
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1
 
     - name: Logout from Docker Registry
       run: |
