--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull newfuture/ddns:master
+        docker pull snowdreamtech/frps:nightly-debian
 
     - name: Login to Alibaba Cloud Docker Registry
       run: |
@@ -25,14 +25,14 @@ jobs:
 
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q newfuture/ddns:master)
+        IMAGE_ID=$(docker images -q snowdreamtech/frps:nightly-debian)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:master
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:nightly-debian
 
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:master
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:nightly-debian
 
     - name: Logout from Docker Registry
       run: |
