--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull jeessy/ddns-go:jeessy/ddns-go:v6.8.1-armv7
+        docker pull jeessy/ddns-go:v6.8.1-armv7
 
     - name: Login to Alibaba Cloud Docker Registry
       run: |
