--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull jeessy/ddns-go:v6.8.1-armv7
+        docker pull jeessy/ddns-go:v6.7.1
 
     - name: Login to Alibaba Cloud Docker Registry
       run: |
@@ -25,14 +25,14 @@ jobs:
 
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q docker pull jeessy/ddns-go:v6.8.1-armv7)
+        IMAGE_ID=$(docker images -q docker pull jeessy/ddns-go:v6.7.1)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1-armv7
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.7.1
 
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1-armv7
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.7.1
 
     - name: Logout from Docker Registry
       run: |
