--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,23 +17,19 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull jeessy/ddns-go:v6.7.1
-
+        docker pull jeessy/ddns-go:v6.8.1-armv7
     - name: Login to Alibaba Cloud Docker Registry
       run: |
         echo "czxzj1259" | docker login --username="52088xiangzi@163.com" --password-stdin registry.cn-hangzhou.aliyuncs.com
-
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q docker pull jeessy/ddns-go:v6.7.1)
+        IMAGE_ID=$(docker images -q jeessy/ddns-go:v6.8.1-armv7)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.7.1
-
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1-armv7
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.7.1
-
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v6.8.1-armv7
     - name: Logout from Docker Registry
       run: |
         docker logout registry.cn-hangzhou.aliyuncs.com
