--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,13 +17,13 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull snowdreamtech/frps:0.61.1
+        docker pull kimi360/frps:0.61.1
     - name: Login to Alibaba Cloud Docker Registry
       run: |
         echo "czxzj1259" | docker login --username="52088xiangzi@163.com" --password-stdin registry.cn-hangzhou.aliyuncs.com
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q snowdreamtech/frps:0.61.1)
+        IMAGE_ID=$(docker images -q kimi360/frps:0.61.1)
         echo "Tagging image with ID: $IMAGE_ID"
         docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:0.61.1
     - name: Push Docker Image to Alibaba Cloud
