--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,19 +17,19 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull xprobe/xinference:v1.8.1-cpu
+        docker pull opensearchproject/opensearch:2.19.3
     - name: Login to Alibaba Cloud Docker Registry
       run: |
         echo "czxzj1259" | docker login --username="52088xiangzi@163.com" --password-stdin registry.cn-hangzhou.aliyuncs.com
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q xprobe/xinference:v1.8.1-cpu)
+        IMAGE_ID=$(docker images -q opensearchproject/opensearch:2.19.3)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v1.8.1-cpu
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:2.19.3
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v1.8.1-cpu
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:2.19.3
     - name: Logout from Docker Registry
       run: |
         docker logout registry.cn-hangzhou.aliyuncs.com
