--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,19 +17,19 @@ jobs:
     - name: Pull Docker Image
       run: |
         echo "Pulling Docker image from Docker Hub..."
-        docker pull neo4j:enterprise-ubi9
+        docker pull c121914yu/fastgpt:v4.14.5
     - name: Login to Alibaba Cloud Docker Registry
       run: |
         echo "czxzj1259" | docker login --username="52088xiangzi@163.com" --password-stdin registry.cn-hangzhou.aliyuncs.com
     - name: Tag Docker Image
       run: |
-        IMAGE_ID=$(docker images -q neo4j:enterprise-ubi9)
+        IMAGE_ID=$(docker images -q c121914yu/fastgpt:v4.14.5)
         echo "Tagging image with ID: $IMAGE_ID"
-        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:enterprise-ubi9
+        docker tag "$IMAGE_ID" registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v4.14.5
     - name: Push Docker Image to Alibaba Cloud
       run: |
         echo "Pushing Docker image to Alibaba Cloud..."
-        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:enterprise-ubi9
+        docker push registry.cn-hangzhou.aliyuncs.com/chenzx12/chenzx_hunnu:v4.14.5
     - name: Logout from Docker Registry
       run: |
         docker logout registry.cn-hangzhou.aliyuncs.com
